--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,7 @@
+
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    background: linear-gradient(90deg, #fff 0%, #fff 100%);
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +9,12 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    border-bottom: 1px solid var(--awb-custom_color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
+
+  
+
   
   .navbar-container {
     display: flex;
@@ -19,7 +25,7 @@
   }
   
   .navbar-logo {
-    color: #fff;
+    color: var(--awb-custom_color);
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -27,6 +33,9 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
+  }
+  .navbar-logo > i{
+    margin: 2px;
   }
   
   .fa-typo3 {
@@ -46,11 +55,11 @@
   }
   
   .nav-item {
-    height: 80px;
+     height: 90%; 
   }
   
   .nav-links {
-    color: #fff;
+    color: var(--awb-custom_color);
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -59,12 +68,12 @@
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 4px solid var(--awb-custom_color);
     transition: all 0.2s ease-out;
   }
   
   .fa-bars {
-    color: #fff;
+    color: #000;
   }
   
   .nav-links-mobile {
@@ -93,7 +102,7 @@
     }
   
     .nav-menu.active {
-      background: #242222;
+      background: #fff;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
@@ -103,14 +112,15 @@
     .nav-links {
       text-align: center;
       padding: 2rem;
-      width: 100%;
+      width: 80%;
       display: table;
     }
   
     .nav-links:hover {
-      background-color: #fff;
+      /*background-color: #000;*/
       color: #242424;
       border-radius: 0;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
   
     .navbar-logo {
@@ -131,7 +141,7 @@
     }
   
     .fa-times {
-      color: #fff;
+      color: #000;
       font-size: 2rem;
     }
   
@@ -144,9 +154,9 @@
       text-decoration: none;
       font-size: 1.5rem;
       background-color: transparent;
-      color: #fff;
+      color: var(--awb-custom_color);
       padding: 14px 20px;
-      border: 1px solid #fff;
+      border: 1px solid var(--awb-custom_color);
       transition: all 0.3s ease-out;
     }
   
