--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,5 +1,6 @@
 :root{
-    --primary : #fff;
+    --primary : #000;
+    --awb-custom_color: #103c6b;
 }
 
 .btn{
@@ -13,13 +14,13 @@
 
 .btn--primary{
     background-color: var(--primary);
-    color: #242424;
+    color: var(--awb-custom_color);
     border: 1px solid var(--primary);
 }
 
 .btn--outline{
     background-color: transparent;
-    color: #fff;
+    color: var(--awb-custom_color);
     padding: 8px 20px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-in-out;
@@ -36,7 +37,7 @@
 }
 
 .btn--medium:hover,.btn--large:hover{
-    background: #fff;
-    color:#242424;
+    background: var(--awb-custom_color);
+    color:#fff;
     transition: all 0.3s ease-in-out;
 }
