--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -49,11 +49,14 @@
     color: white;
 }
 
-@media (max-width:638px) {
+@media screen and (max-width: 960px) {
     .description-footer {
         display: flex;
         flex-wrap: wrap;
         gap: 5em;
+    }
+    .footer-background{
+        position: relative;
     }
 }
 
