--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,7 @@
 
 .footer-background {
     background: linear-gradient(180deg, #370665 0%,#103c6b 100%);
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
    
@@ -36,16 +36,16 @@
     justify-content: center;
     grid-gap: 4px;
     grid-template-columns: 10em 12em 10em;
-    margin: 1em;
+    padding: 1em;
 }
 
 .copyright{
-    margin: 0.5em;
+    padding: 0.5em 0.5em 0.5em 0em;
     text-align: center;
 }
 
 .copyright > span{
-    font-size: 10px;
+    font-size: 15px;
     color: white;
 }
 
