--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,7 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    border-bottom: 1px solid var(--awb-custom_color);
+    /*border-bottom: 1px solid var(--awb-custom_color);*/
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 
