--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -28,3 +28,15 @@
     text-align: center;
     color: rgba(128, 128, 128, 0.775);
 }
+
+@media  (max-width: 1300px){
+    .card{
+        width: 25vh;
+        height: 35vh; 
+    }
+    .img-movie > img{
+        width: auto;
+        max-width: 100%;
+        height: 18vh;
+    }
+}
