--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -95,7 +95,7 @@
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+      top: 50px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -107,6 +107,7 @@
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+      padding-inline-start: 0px;
     }
   
     .nav-links {
