--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -15,12 +15,10 @@
     z-index: 1000;
   }
   
-  .modal-title {
-color: white;
-  }
+
   /* Modal content */
   .modal-content {
-    background-color:var(--awb-custom_color);
+    background-color:white;
     padding: 20px;
     border-radius: 5px;
     position: relative;
@@ -35,8 +33,8 @@ color: white;
     right: 10px;
     font-size: 20px;
     cursor: pointer;
-    color: white;
+    color: var(--awb-custom_color);
   }
   .modaltitle > h2{
-    color: white;
+    color: var(--awb-custom_color);
   }
