--- a/src/views/private/Management.css
+++ b/src/views/private/Management.css
@@ -64,6 +64,7 @@
     border-radius: 5px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border: 2px solid var(--awb-custom_color);
+    height:9vh ;
 }
 
 .image-view > img {
