--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -23,7 +23,7 @@
     border-radius: 5px;
     position: relative;
     width: 80%;
-    max-width: 600px;
+    max-width: 800px;
   }
   
   /* Close button */
@@ -35,6 +35,6 @@
     cursor: pointer;
     color: var(--awb-custom_color);
   }
-  .modaltitle > h2{
-    color: var(--awb-custom_color);
+  .modal-title > h2 {
+    color: var(--awb-custom_color_2);
   }
